1997-07-22  Miles Bader  <miles@gnu.ai.mit.edu>

	* devport.c: File removed.
	* Makefile (targets): Remove devport.
	(SRCS): Remove devport.c.

1997-07-15  Miles Bader  <miles@gnu.ai.mit.edu>

	* magic.c (main): Actually parse the arg.

1997-07-14  Miles Bader  <miles@gnu.ai.mit.edu>

	* magic.c (argp_program_version, args_doc, doc): New variables.
	(main): Use argp to parse args.
	Add new includes <argp.h> & <version.h>.

Fri Feb 28 20:00:14 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (fwd null ifsock fifo new-fifo devport firmlink):
	Add firmlink to targets depending on libthreads.

	* null.c (main): Make multithreaded.

Tue Feb 25 15:42:40 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* firmlink.c (main): Make multithreaded.

Sun Feb 23 00:23:49 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* firmlink.c (argp): Use OPTIONS.
	(getroot): If firmlink returns ENOENT, act like an unresolvable link.
	Don't support visible mode.
	(options, parse_opt): Remove -i.

Wed Feb 19 21:34:01 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* null.c (argp_program_version): Make const.

	* fifo.c (argp_program_version, argp): New variables.
	(parse_opt): New function.
	(options): Use argp structures instead of getopt ones.
	(main): Use argp instead of getopt.
	<argp.h>: New include.
	<getopt.h>: Include removed.
	(trivfs_protid_port_class, trivfs_cntl_portclasses,
	trivfs_protid_nportclasses, trivfs_cntl_nportclasses):
	Variables removed.
	(main): Don't use them.
	Don't create our own port classes/bucket, let trivfs_startup do it.

Tue Feb 18 12:55:50 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* fifo.c <version.h>: New include.
	(parse_opt): Use KEY, not OPT.

Fri Feb 14 03:05:59 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* null.c (control_class, node_class, port_bucket,
	trivfs_protid_port_class, trivfs_cntl_portclasses,
	trivfs_protid_nportclasses, trivfs_cntl_nportclasses):
	Variables removed.
	(main): Don't use them.
