@@ -86,7 +86,7 @@ main (int argc, char **argv)
 
   /* Launch. */
   ports_manage_port_operations_multithread (fsys->pi.bucket, trivfs_demuxer,
-					    2 * 60 * 1000, 0, 0, 0);
+					    2 * 60 * 1000, 0, 0);
 
   exit (0);
 }
